--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,12 @@ body{
         padding: 18px 20px;
     }
 }
+
+.image-menu{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0em 10%;
+    position: fixed;}
